Fixed wrong align
SVN revision: 1824

--- a/themes/default/default.css
+++ b/themes/default/default.css
@@ -625,7 +625,7 @@ td {
 
 .quotetable {
   width:98%;
-  align:center;
+  text-align:center;
   background-color:black;
   border:0px;
   padding:0px;
